--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>HTML5 Test Page</title>
   </head>
   <body>
-    <a href="messages.html">messages</a>
+    <a href="messages.html">go to messages</a>
   </body>
 </html>
